# lge

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Example/: Main.cc  README.md  compile_shaders.sh  position_color.frag  position_color.frag.txt  position_color.vert  position_color.vert.txt
LGE/: Application.cc  DebugUI.cc  DebugUIFont.cc  Descriptor.cc  GPUMemory.cc  Init.cc  Log.cc  Pipeline.cc  Vulkan.cc  VulkanMemoryAllocator.cc  Window.cc  compile_shaders.sh  debugui.frag  debugui.frag.txt  debugui.vert  debugui.vert.txt
include/LGE/: Application.h  DebugUI.h  Descriptor.h  GPUMemory.h  Init.h  Log.h  Math.h  Pipeline.h  Vulkan.h  VulkanFunctions.h  Window.h
scripts/: .gitignore  GNUmakefile  generate_font.cc
